[gd_scene load_steps=5 format=3 uid="uid://dr2yy0w2h8pk2"]

[ext_resource type="Script" path="res://Scripts/Shops/refund.gd" id="1_rkvdf"]
[ext_resource type="Texture2D" uid="uid://cuykv8qwwlnx6" path="res://assets/Asset-artist/panel_option-removebg-preview.png" id="2_w4onr"]
[ext_resource type="Texture2D" uid="uid://ccw65oc5l00l" path="res://assets/AssetInGame/ticket.png" id="3_yh04w"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n6a7n"]
texture = ExtResource("2_w4onr")

[node name="Refund" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rkvdf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -147.0
offset_top = -87.0
offset_right = 146.0
offset_bottom = 82.0
theme_override_styles/panel = SubResource("StyleBoxTexture_n6a7n")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(20, 3)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -11.5
offset_right = 81.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="MoneyAmount" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
texture = ExtResource("3_yh04w")
expand_mode = 1

[node name="Label2" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Will be lost..."

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(20, 3)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.5
offset_top = -59.0
offset_right = 81.5
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 80

[node name="CancelButton" type="Button" parent="Panel/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Cancel"

[node name="RefundButton" type="Button" parent="Panel/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Refund
"

[connection signal="pressed" from="Panel/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer2/RefundButton" to="." method="_on_refund_button_pressed"]
